# loom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  build.rs  julia-daemon.jl  julia.typ.embedded  loom.toml  loom.typ.embedded  r-daemon.R  r.typ.embedded
src/: cache.rs  codegen.rs  config.rs  daemon.rs  main.rs  parser.rs  runner.rs  watcher.rs
