[package]
name = "loom"
version = "0.1.2"
edition = "2024"
description = "Code preprocessor for Typst — weaves Julia and R output into documents"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
libc = "0.2"
log = "0.4"
notify = "8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
